tests/algorithms/x/Clojure/other/guess_the_number_search.out
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/other/guess_the_number_search.clj:51:1).
Cannot assign to non-mutable: while_flag_1

Full report at:
/tmp/clojure-9580066684897116931.edn